# ghostserver

./: .gitignore  CLAUDE.md  LICENSE  README.de.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  conduit.toml  ghostserver.toml  ghostserver.toml.example  pyproject.toml
docs/superpowers/plans/: 2026-03-30-conduit-mcp-server.md
src/conduit/: __init__.py  __main__.py  boot.py  config.py  gate.py  google_auth.py  server.py  tokens.py
src/conduit/adapters/: __init__.py  aws.py  cloudflare.py  gcal.py  github.py  gmail.py
src/ghostserver/: __init__.py  __main__.py  boot.py  config.py  google_auth.py  server.py  tokens.py
src/ghostserver/adapters/: __init__.py  aws.py  cloudflare.py  gcal.py  github.py  gmail.py
tests/: conftest.py  test_boot.py  test_config.py  test_gate.py  test_server.py  test_tokens.py
tests/adapters/: conftest.py  test_aws.py  test_cloudflare.py  test_gcal.py  test_github.py  test_gmail.py
