[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostserver"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "boto3>=1.35",
    "maelspine @ file:///D:/lost_marbles/maelspine",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ghostserver"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
